--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redux": "^4.2.0",
+    "sass": "^1.56.1",
+    "styled-components": "^5.3.6",
     "typescript": "4.8.4"
   }
 }
